--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/react-slick": "^1.0.2",
 		"@types/node": "20.5.0",
 		"@types/react": "18.2.20",
 		"@types/react-dom": "18.2.7",
+		"@types/react-slick": "^0.23.10",
 		"clsx": "^2.0.0",
 		"next": "13.4.18",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "^1.66.0",
+		"slick-carousel": "^1.8.1",
 		"typescript": "5.1.6"
 	},
 	"devDependencies": {
