--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	},
 	"dependencies": {
 		"@ant-design/react-slick": "^1.0.2",
+		"@types/js-cookie": "^3.0.3",
 		"@types/node": "20.5.0",
 		"@types/react": "18.2.20",
 		"@types/react-dom": "18.2.7",
 		"@types/react-slick": "^0.23.10",
 		"clsx": "^2.0.0",
+		"js-cookie": "^3.0.5",
 		"next": "13.4.18",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
