--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
 	},
 	"dependencies": {
 		"@ant-design/react-slick": "^1.0.2",
+		"@tanstack/react-query": "^4.33.0",
 		"@types/js-cookie": "^3.0.3",
 		"@types/node": "20.5.0",
 		"@types/react": "18.2.20",
 		"@types/react-dom": "18.2.7",
 		"@types/react-slick": "^0.23.10",
+		"axios": "^1.4.0",
 		"clsx": "^2.0.0",
 		"js-cookie": "^3.0.5",
 		"next": "13.4.18",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.4",
 		"sass": "^1.66.0",
 		"slick-carousel": "^1.8.1",
 		"typescript": "5.1.6"
