--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.9",
 		"js-cookie": "^3.0.5",
+		"moment": "^2.29.4",
 		"next": "13.4.18",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
