--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -p 8080",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
